# ConeTrace

./: .gitignore  AspectRatioWrapper.py  CustomEventFilter.py  CustomWidgets.py  ForensicLogger.py  VideoTimeline.py  generate_version_metadata.py  main.py  pyproject.toml  readme.md  tools.py
.github/workflows/: release.yml
conetrace/: BackendBridge.py  CustomEventFilter.py  CustomWidgets.py  ForensicLogger.py  VideoTimeline.py  tools.py
example_configs/: example.json
