[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ConeTrace"
dynamic = ["version"]
description = "A metadata-based analysis interface for correlating heterogeneous media data relating to major incidents."
requires-python = ">=3.10"
dependencies = [
    "PySide6",
    "folium",
    "opencv-python",
    "requests"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools_scm]
# Enables git tag version extraction